Change theming from text-shadow color to a whole screen overlay

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 		<link rel="manifest" href="manifest.json">
 	</head>
 	<body>
-		<ul id="chars"></ul>
+		<ul id="grid"></ul>
+		<div id="overlay"></div>
+
 		<script type="text/javascript" src="js/clock.js"></script>
 		<script type="text/javascript" src="js/lang/es.js"></script>
 		<script type="text/javascript" src="js/lang/en.js"></script>
-		<script type="text/javascript">initialize();</script>
 	</body>
 </html>
