Changed keyboard shortcuts for touch gestures, implemented fullscreen toggle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<ul id="grid"></ul>
 		<div id="overlay"></div>
 
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
+		<script type="text/javascript" src="js/screenfull.min.js"></script>
 		<script type="text/javascript" src="js/clock.js"></script>
 		<script type="text/javascript" src="js/lang/es.js"></script>
 		<script type="text/javascript" src="js/lang/en.js"></script>
