Add french language and update others to work.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 		<script type="text/javascript" src="js/clock.js"></script>
 		<script type="text/javascript" src="js/lang/es.js"></script>
 		<script type="text/javascript" src="js/lang/en.js"></script>
+		<script type="text/javascript" src="js/lang/fr.js"></script>
 	</body>
 </html>
